--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,45 @@ body {
 .user-actions-item-search {
     margin-left: 80px;
 }
+
+.top {
+    background-image: url(../images/top-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover;
+}
+
+.top-inner {
+    min-height: 500px;
+    color: #FFFFFF;
+    font-family: "Cormorant", serif;
+    font-weight: 400;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.top-title {
+    font-size: 60px;
+    margin-bottom: 20px;
+    max-width: 780px;
+    line-height: 1;
+    font-weight: 400;
+}
+
+.top-text {
+    font-size: 24px;
+    margin-bottom: 48px;
+    max-width: 560px;
+    line-height: normal;
+}
+
+.blockquote-text {
+    text-align: center;
+    font-family: "Cormorant", serif;
+    font-size: 40px;
+    font-style: italic;
+    line-height: normal;
+    margin: 150px auto;
+    max-width: 700px;
+}
